--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -6,19 +6,19 @@
     android:layout_height="match_parent"
     tools:context=".LoginActivity">
 
+
     <ImageView
         android:id="@+id/imageViewRegister"
         android:layout_width="match_parent"
         android:layout_height="160dp"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="48dp"
         android:layout_marginEnd="30dp"
-        android:layout_marginTop="180dp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:srcCompat="@drawable/bangkit_logo"
-        />
-
+        app:srcCompat="@drawable/bangkit_logo" />
 
     <TextView
         android:id="@+id/passwordTV"
@@ -32,35 +32,36 @@
         app:layout_constraintTop_toBottomOf="@+id/EmailEditText" />
 
     <TextView
-        android:id="@+id/emailTV"
+        android:id="@+id/username"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="@string/email"
+        android:text="@string/username"
         android:textAppearance="@android:style/TextAppearance.Material"
         app:layout_constraintStart_toStartOf="@+id/imageViewRegister"
         app:layout_constraintTop_toBottomOf="@+id/imageViewRegister" />
+
     <com.bangkit.hargain.customEmailEditText
         android:id="@+id/EmailEditText"
-        android:background="@drawable/border_box"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
-        android:layout_marginTop="4dp"
+        android:layout_height="48dp"
         android:layout_marginStart="30dp"
+        android:layout_marginTop="4dp"
         android:layout_marginEnd="30dp"
+        android:background="@drawable/border_box"
         android:ems="10"
-        android:hint="@string/email"
+        android:hint="@string/username"
         android:inputType="textEmailAddress"
         android:padding="10dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.933"
-        app:layout_constraintStart_toStartOf="@+id/emailTV"
-        app:layout_constraintTop_toBottomOf="@+id/emailTV"
+        app:layout_constraintStart_toStartOf="@+id/username"
+        app:layout_constraintTop_toBottomOf="@+id/username"
         tools:ignore="SpeakableTextPresentCheck" />
 
     <com.bangkit.hargain.customPasswordEditText
         android:id="@+id/PasswordEditText"
         android:layout_width="match_parent"
-        android:layout_height="40dp"
+        android:layout_height="48dp"
         android:layout_marginStart="30dp"
         android:layout_marginTop="4dp"
         android:layout_marginEnd="30dp"
@@ -76,7 +77,6 @@
         tools:ignore="SpeakableTextPresentCheck" />
 
 
-
     <Button
         android:id="@+id/login"
         android:layout_width="wrap_content"
@@ -88,9 +88,10 @@
         android:text="@string/action_sign_in"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/password"
-        app:layout_constraintVertical_bias="0.2" />
+        app:layout_constraintTop_toBottomOf="@+id/PasswordEditText"
+        app:layout_constraintVertical_bias="1.0" />
 
     <ProgressBar
         android:id="@+id/loading"
@@ -99,11 +100,12 @@
         android:layout_gravity="center"
         android:layout_marginTop="64dp"
         android:layout_marginBottom="64dp"
-        android:visibility="gone"
+        android:visibility="visible"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="@+id/password"
-        app:layout_constraintStart_toStartOf="@+id/password"
+        app:layout_constraintEnd_toEndOf="@+id/PasswordEditText"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="@+id/PasswordEditText"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.3" />
+        app:layout_constraintVertical_bias="0.554" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
