--- a/app/src/main/res/layout/fragment_main_search.xml
+++ b/app/src/main/res/layout/fragment_main_search.xml
@@ -3,12 +3,20 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".presentation.main.mainmenu.MainSearchFragment">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    tools:context=".presentation.main.mainmenu.mainsearch.MainSearchFragment">
 
     <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <androidx.recyclerview.widget.RecyclerView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+
+         />
+    <com.google.android.material.bottomnavigation.BottomNavigationView
+        android:id="@+id/navigation_search"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="680dp"
+        app:menu="@menu/bottom_nav_menu"/>
 
 </FrameLayout>
