--- a/app/src/main/res/menu/bottom_nav_menu.xml
+++ b/app/src/main/res/menu/bottom_nav_menu.xml
@@ -5,17 +5,23 @@
     <item
         android:id="@+id/navigation_home"
         android:icon="@drawable/ic_home_24"
-        android:title="@string/title_home" />
+        android:title="@string/title_home"
+
+        />
 
     <item
         android:id="@+id/navigation_dashboard"
         android:icon="@drawable/ic_search_24"
-        android:title="@string/title_search" />
+        android:title="@string/title_search"
+
+        />
 
     <item
         android:id="@+id/navigation_profile"
         android:icon="@drawable/ic_person_24"
-        android:title="@string/title_profile" />
+        android:title="@string/title_profile"
+
+        />
 
 
 </menu>
