feat: color value based on design system

--- a/app/src/main/res/layout/fragment_home_main.xml
+++ b/app/src/main/res/layout/fragment_home_main.xml
@@ -22,8 +22,9 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
+        android:visibility="visible"
         android:elevation="20dp"
+        android:indeterminateTint="@color/blue_50"
         />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
