feat(style): add button primary and secondary

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -78,6 +78,7 @@
 
     <Button
         android:id="@+id/loginButton"
+        style="@style/buttonPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="start"
