--- a/app/src/main/res/layout/fragment_testing.xml
+++ b/app/src/main/res/layout/fragment_testing.xml
@@ -10,11 +10,12 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment"
+        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
 
-    <Button
-        style="@style/buttonSecondary"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Halo Hasna" />
+    <!--    <Button-->
+<!--        style="@style/buttonSecondary"-->
+<!--        android:layout_width="wrap_content"-->
+<!--        android:layout_height="wrap_content"-->
+<!--        android:text="Halo Hasna" />-->
 </FrameLayout>
