--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -12,8 +12,11 @@
         <!-- Status bar color. -->
         <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
         <!-- Customize your theme here. -->
-        <item name="fontFamily"></item>
-        
+        <item name="fontFamily">@font/poppins_regular</item>
+<!--        <item name="textAppearanceBody1">@style/TextAppearance.Hargain.Body1</item>-->
+<!--        <item name="textAppearanceButton">@style/TextAppearance.Hargain.Button</item>-->
+
+
     </style>
 
     <style name="Theme.Hargain.NoActionBar">
@@ -24,4 +27,6 @@
     <style name="Theme.Hargain.AppBarOverlay" parent="ThemeOverlay.AppCompat.Dark.ActionBar" />
 
     <style name="Theme.Hargain.PopupOverlay" parent="ThemeOverlay.AppCompat.Light" />
+
+
 </resources>
