--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -25,7 +25,6 @@
         android:id="@+id/passwordTV"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-
         android:layout_marginTop="8dp"
         android:text="@string/password"
         android:textAppearance="@android:style/TextAppearance.Material"
@@ -94,14 +93,13 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
+        style="@style/progressBarPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="invisible"
-        android:elevation="20dp"
         />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
