--- a/app/src/main/res/layout/fragment_home_main.xml
+++ b/app/src/main/res/layout/fragment_home_main.xml
@@ -16,15 +16,14 @@
 
     <ProgressBar
         android:id="@+id/progressBar"
+        style="@style/progressBarPrimary"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        android:visibility="visible"
-        android:elevation="20dp"
-        android:indeterminateTint="@color/blue_50"
+
         />
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
