--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -15,8 +15,15 @@
         <item name="android:textStyle">bold</item>
 
     </style>
+    
+    <style name="progressBarPrimary">
+        <item name="android:visibility">invisible</item>
+        <item name="android:elevation">20dp</item>
+        <item name="android:indeterminateTint">@color/primary_30</item>
+    </style>
 
 
+    <!--  belum dipakai  -->
     <style name="TextAppearance.Hargain.Body1" parent="TextAppearance.MaterialComponents.Body1">
         <item name="fontFamily">@font/poppins_regular</item>
     </style>
