--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -20,10 +20,19 @@
         android:id="@+id/mainSearchFragment"
         android:name="com.bangkit.hargain.presentation.main.mainmenu.mainsearch.MainSearchFragment"
         android:label="fragment_main_search"
-        tools:layout="@layout/fragment_main_search" />
+        tools:layout="@layout/fragment_main_search" >
+        <action
+            android:id="@+id/action_mainSearchFragment_to_createProductFragment"
+            app:destination="@id/createProductFragment" />
+    </fragment>
     <fragment
         android:id="@+id/accountFragment"
         android:name="com.bangkit.hargain.presentation.main.mainmenu.account.AccountFragment"
         android:label="fragment_account"
         tools:layout="@layout/fragment_account" />
+    <fragment
+        android:id="@+id/createProductFragment"
+        android:name="com.bangkit.hargain.presentation.main.product.create.CreateProductFragment"
+        android:label="@string/add_product"
+        tools:layout="@layout/fragment_create_product" />
 </navigation>
