--- a/app/src/main/res/layout/fragment_home_main.xml
+++ b/app/src/main/res/layout/fragment_home_main.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:layout_marginTop="40dp"
-        android:layout_marginHorizontal="20dp"
+        android:layout_marginHorizontal="@dimen/activity_horizontal_margin"
         />
 
     <ProgressBar
