--- a/app/src/main/res/navigation/nav_graph.xml
+++ b/app/src/main/res/navigation/nav_graph.xml
@@ -28,7 +28,7 @@
     <fragment
         android:id="@+id/profileFragment"
         android:name="com.bangkit.hargain.presentation.main.mainmenu.profile.ProfileFragment"
-        android:label="fragment_profile"
+        android:label="Profile"
         tools:layout="@layout/fragment_profile" />
     <fragment
         android:id="@+id/createProductFragment"
